discussion/kv_engine/156529/156529_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: If42bca909b0e7207213dbefd76fa09def27ab931

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-09-16 08:37:15.000000000
Message: 
Patch Set 5: Patch Set 4 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-16 09:08:15.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12488/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12488/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12488/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2130/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14104/ : FAILURE

Timeout of a CTest test [2021-09-16T08:46:44.539Z]  22/413 Test   #5: memcached-breakpad-test-unknown_exception ...................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14104/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34054/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39976/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11277/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13244/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14854/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2156/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22354/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
